[project]
name = "imedia"
version = "0.1.0"
description = ""
authors = [
    {name = "kessa99",email = "kipre325@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "fastapi[standard] (>=0.135.1,<0.136.0)"
]

[tool.poetry]
packages = [{include = "imedia", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
